# stac-mgmt

./: .gitignore  README.md  mypy.ini  pyproject.toml
wsf2019/: constants.py  stac.py
