[tool.poetry]
name = "stac-mgmt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pystac-client = "^0.3.2"
rio-stac = "^0.3.2"
Shapely = "^1.8.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.8"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
